Fix documentation page styling (#2256)
* Automatically choose page width correctly
* Calculate nav height correctly
* Make sure footer does not overlap with nav

(cherry picked from commit b397c04886bcf1f417eaed3d217fa23d93019e18)

--- a/web/content/css/_asciidoc.scss
+++ b/web/content/css/_asciidoc.scss
@@ -603,8 +603,7 @@ body>div[id] {
   max-width: 62.5em;
   position: relative;
   padding-left: .9375em;
-  padding-right: .9375em;
-  width: 100%
+  padding-right: .9375em
 }
 
 body>div[id]::before,
@@ -754,7 +753,7 @@ body.toc2 #header>h1:nth-last-child(2) {
     border-bottom-width: 0!important;
     z-index: 1000;
     padding: 1.25em 1em;
-    height: 100%;
+    height: calc(100% - (70px + 2.5em));
     overflow: auto
   }
   #toc.toc2 #toctitle {
@@ -829,7 +828,8 @@ body.toc2 #header>h1:nth-last-child(2) {
 #footer {
   max-width: none;
   background: rgb(2, 93, 140);
-  padding: 1.25em
+  padding: 1.25em;
+  margin-left: 2em
 }
 
 #footer-text {
